# project_ai_mcp

./: .env.sample  README.md  main.py  main_calculator.py  main_file.py  main_mlschool.py  main_use_mcp_example.py  main_use_mcp_example_simple.py  mcp_server_local.py  mcp_server_remote.py  pyproject.toml  requirements.txt  requirements_del.txt  schedule_repository.py  test_mcp.py  test_schedule_client.py
.cursor/rules/: backend.mdc
_reference/data/: schedules.csv
_reference/setting/: mcp.json
src/management_file/domain/service/: file_server.py  file_system_manager.py
tests/: test_main_file.py
