[project]
name = "project_ai_mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "mcp==1.5.0",
    "pydantic==2.10.6",
    "pytest-asyncio==0.25.3",
    "uvicorn==0.34.0",
    "aiohttp",
    "pymcp==0.1.0",
    "requests",
    "boto3",
]
